# MotionGloveSDK_cpp

./: CMakeLists.txt  LICENSE  README.md  [Linux]build.sh  [Windows]build_vs2022.bat  [Windows]build_vs2026.bat
.claude/: settings.local.json
.claude/memory/: MEMORY.md
.github/workflows/: cmake-multi-platform.yml
MotionGloveSDK/: CMakeLists.txt
MotionGloveSDK/inc/: decodeAsGloveCSV.h  eulerToQuat.h  motionGloveSdkHelper.h  readWriteLock.h  resource.h
MotionGloveSDK/include/: motionGloveSDK.h  motionGloveSDKDef.h  motionGloveSDK_HMAXGloveDef.h  motionGloveSDK_commonDef.h
MotionGloveSDK/src/: decodeAsGloveCSV.cpp  eulerToQuat.cpp  motionGloveSDK.cpp  motionGloveSdkHelper.cpp
MotionGloveSDK_examples/src/: motionGloveSDK_example1.cpp  motionGloveSDK_example2.cpp  motionGloveSDK_example3.cpp  motionGloveSDK_example4.cpp  motionGloveSDK_example5.cpp
